--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-#    url: jdbc:mysql://192.168.159.128:3306/mydb
-    url: jdbc:mysql://192.168.11.131:3306/mydb
+    url: jdbc:mysql://192.168.159.128:3306/mydb
+#    url: jdbc:mysql://192.168.11.131:3306/mydb
     username: wls
     password: Wls141215!
   jpa:
@@ -32,6 +32,22 @@ spring:
           starttls:
             enable: true
             required: true
+  redis:
+    database: 0
+    host: 192.168.159.128
+    port: 6379
+    password: Wls141215!
+    pool:
+      # 连接池最大连接数（使用负值表示没有限制）
+      max-active: 8
+      # 连接池最大阻塞等待时间（使用负值表示没有限制）
+      max-wait: -1
+      # 连接池中的最大空闲连接
+      max-idle: 8
+      # 连接池中的最小空闲连接
+      min-idle: 0
+    # 连接超时时间（毫秒）
+    timeout: 0
 mybatis:
   type-aliases-package: com.wls.diypro.model
   mapper-locations: classpath:static/sqlmapper/*.xml
