--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,7 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.11.131:3306/mydb
+    url: jdbc:mysql://192.168.159.128:3306/mydb
+#    url: jdbc:mysql://192.168.11.131:3306/mydb
     username: wls
     password: Wls141215!
   jpa:
