--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wls</groupId>
-    <artifactId>diypro</artifactId>
+    <artifactId>project</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>diypro</name>
-    <description>diypro</description>
+    <name>project</name>
+    <description>project</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
